--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                       <tr>
                         <th width="30%">Father Name</th>
                         <td width="2%">:</td>
-                        <td>A.Rajendram</td>
+                        <td>A.Rajendran</td>
                       </tr>
                       <tr>
                         <th width="30%">Mother Name</th>
